<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.themable.RssiInfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/signal_indicator_label" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"
            app:layout_constraintTop_toTopOf="parent" />

        <de.eloc.eloc_control_panel.widgets.ListItem
            android:id="@+id/none_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:itemType="selectable"
            app:keyText="@string/rssi_label_none"
            app:layout_constraintTop_toBottomOf="@id/top_space" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/none_item" />

        <de.eloc.eloc_control_panel.widgets.ListItem
            android:id="@+id/description_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:itemType="selectable"
            app:keyText="@string/rssi_label_description_only"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/description_item" />

        <de.eloc.eloc_control_panel.widgets.ListItem
            android:id="@+id/power_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:itemType="selectable"
            app:keyText="@string/rssi_label_power_only"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/power_item" />

        <de.eloc.eloc_control_panel.widgets.ListItem
            android:id="@+id/description_and_power_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:itemType="selectable"
            app:keyText="@string/rssi_label_description_and_power"
            app:layout_constraintTop_toBottomOf="@id/divider3" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/power_item" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>